# dlpui

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
etc/: ARCHITECTURE.md  flow.excalidraw  ui.excalidraw  whisper-model-select.excalidraw
etc/scripts/: extract-linux.win.sh  extract-win.win.sh  release.win.sh
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  migrations.rs  tray.rs
src-tauri/src/platform/: mod.rs
src/components/: app-sidebar.tsx  error-page.tsx
src/features/downloads/: add-new-download-button.tsx  download-session-row.tsx  downloads-table.tsx
src/features/session/: session-new-page.tsx  session-page.tsx
src/store/: use-download-session-store.ts
src/store/config-store/: config-fs.ts  config-schema.ts  use-config-store.ts
